Customizing front-end app for file-stage.fullstack.cash

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -31,7 +31,7 @@
 
       // Send as multipart/form-data
       // Ensure the URL points to your server
-      const response = await fetch("http://localhost:5040/ipfs/upload", {
+      const response = await fetch("https://file-stage.fullstack.cash/ipfs/upload", {
         method: "POST",
         body: data,
       });
