Adding more instructions to app

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -15,7 +15,8 @@
           Use the button below to upload a file for staging to
           the <a href="https://psffpp.com/" target="_blank">PSF File Pinning Service (PSFFPP)</a> cluster
           on the IPFS network. Once the file
-          is staged, you can generate a Pin Claim so that the PSFFPP nodes
+          is staged, the app will give you the CID of the file. You can use that
+          CID to generate a Pin Claim so that the PSFFPP nodes
           each pin the file.
         </p>
         <p>
