Adding more debugging

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -53,6 +53,8 @@
           method: "POST",
           body: data,
         });
+        console.log('response: ', response)
+
         const result = await response.json();
         console.log('result: ', result)
 
